tests/baselines/reference/restElementWithInitializer2.errors.txt
restElementWithInitializer2.ts(3,7): error TS1186: A rest element cannot have an initializer.


==== restElementWithInitializer2.ts (1 errors) ====
    var a: number[];
    var x: number[];
    [...x = a] = a;  // Error, rest element cannot have initializer
          ~
!!! error TS1186: A rest element cannot have an initializer.
    